# thermalvis

./: .gitignore  CMakeLists.txt
cmake/find/: opencv.cmake
cmake/templates/: thermalvisConfig.cmake.in
include/thermalvis/calibrator/: calibration.hpp
include/thermalvis/streamer/: streamer_config.hpp
qt/calibrator/: CMakeLists.txt  mainwindow_calibrator.h
qt/flow/: CMakeLists.txt  mainwindow_flow.h
qt/slam/: CMakeLists.txt  mainwindow_slam.h
qt/streamer/: CMakeLists.txt  mainwindow_streamer.h
src/calibrator/: calib.cpp
src/flow/: flow_config.cpp
src/slam/: slam_config.cpp
